refactor/workdatasearch 중간점검-다른 코드 지워짐